Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2191

Test failure on test suite conf-sanity, subtest test_57a

XMLWordPrintable

    • 3
    • 5234

      This issue was created by maloo for Li Wei <liwei@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/6f4fd31a-1735-11e2-afe1-52540035b04c.

      The sub-test test_57a failed with the following error:

      tunefs failed

      From the test output:

      [...]
      CMD: fat-intel-1vm4 tunefs.lustre --failnode=10.10.4.73@tcp lustre-ost1/ost1
      fat-intel-1vm4: 
      fat-intel-1vm4: tunefs.lustre FATAL: Device lustre-ost1/ost1 has not been formatted with mkfs.lustre
      fat-intel-1vm4: tunefs.lustre: exiting with 19 (No such device)
      checking for existing Lustre data: not found
       conf-sanity test_57a: @@@@@@ FAIL: tunefs failed 
      

      Info required for matching: conf-sanity 57a

            utopiabound Nathaniel Clark
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: