LU-2191 utils: tunefs.lustre failed to read ZFS partitions

ZFS shared libraries were not loaded prior to attempting to verify
type of partition supplied on commandline, it would never recognize a
ZFS partition.  Mount type also needs to be passed down to
osd_read_lld, and not just use whatever is set in defaults.

Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Iad88da4ddd9cf5fcc75f8409933467d9237f58d3
Reviewed-on: http://review.whamcloud.com/4469
Tested-by: Hudson
Reviewed-by: Niu Yawei <niu@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>